good format second commit

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -82,6 +82,10 @@ body {
 .share-social span {
   padding: 0 10px;
 }
+
+.modal-container {
+  transition: all ease 4s;
+}
 /* swiper lib */
 
 .swiper {
